--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
+    "lucide-react": "^0.441.0",
     "next": "^14.2.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
